operator/pkg/gateway-api/testdata/gateway/httproute-identical-rule-order/input/httproute-identical-rule-order.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: identical-rule-order
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /same
      headers:
      - name: x-version
        value: one
      - name: x-color
        value: blue
      queryParams:
      - name: color
        value: green
      - name: animal
        value: whale
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /same
      headers:
      - name: x-color
        value: blue
      - name: x-version
        value: one
      queryParams:
      - name: animal
        value: whale
      - name: color
        value: green
    backendRefs:
    - name: infra-backend-v2
      port: 8080
